--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
+# VIM
 vim/.netrwhist
 vim/backup/
 vim/view/
+vim/bundle/setcolors.vim/
+vim/bundle/vim-colorschemes/
+vim/bundle/vim-pathogen/
+vim/bundle/vim-repeat/
+vim/bundle/vim-surround/
+
+# MISC
 **/*.DS_Store
