--- a/config/i3status/config
+++ b/config/i3status/config
@@ -1,3 +1,11 @@
+# i3status configuration file.
+# see "man i3status" for documentation.
+
+# It is important that this file is edited as UTF-8.
+# The following line should contain a sharp s:
+# ß
+# If the above line is not correctly displayed, fix your editor first!
+
 general {
         output_format = "i3bar"
         colors = true
@@ -7,13 +15,13 @@ general {
         interval = 5
 }
 
-order += "wireless wlp5s0"
-order += "ethernet eth0"
+order += "wireless _first_"
+order += "ethernet _first_"
 order += "battery all"
 order += "cpu_usage"
 order += "cpu_temperature 0"
 order += "volume master"
-order += "time"
+order += "tztime locale"
 
 #order += "disk /"
 #order += "load"
@@ -21,23 +29,22 @@ order += "time"
 #order += "run_watch DHCP"
 #order += "run_watch VPNC"
 #order += "path_exists VPN"
-#order += "tztime berlin"
+#order += "tztime locale"
 
 disk "/" {
         format = "%free"
 }
 
-wireless wlp5s0 {
+wireless _first_ {
         format_up = "W: %essid (%ip)"
         format_down = "W: -"
 }
 
-ethernet eth0 {
-        # if you use %speed, i3status requires the cap_net_admin capability
+ethernet _first_ {
+        # if you use %speed, i3status requires root privileges
         format_up = "E: %ip"
         format_down = "E: -"
 }
-
 
 battery all {
 		hide_seconds = true
@@ -79,15 +86,15 @@ time {
         format = "%a %b %d, %H:%M"
 }
 
-tztime berlin {
-        format = "%Y-%m-%d %H:%M:%S %Z"
-        timezone = "Europe/Berlin"
+tztime locale {
+        format = "%Y-%m-%d %H:%M:%S"
+        #format = "%Y-%m-%d %H:%M:%S %Z"
+        #timezone = "Europe/Berlin"
 }
 
 load {
         format = "%5min"
 }
-
 
 run_watch DHCP {
         pidfile = "/var/run/dhclient*.pid"
@@ -102,5 +109,3 @@ path_exists VPN {
         # path exists when a VPN tunnel launched by nmcli/nm-applet is active
         path = "/proc/sys/net/ipv4/conf/tun0"
 }
-
-
