--- a/config/i3/config
+++ b/config/i3/config
@@ -9,29 +9,32 @@
 set $mod Mod4
 
 #fonts
-set $font1 Monaco
+set $font1 Monaco Mono
 set $font2 Roboto Mono Bold
-#set $font3 gohu
-set $font3 bitbuntufull
+set $font3 Gohu Gohufont
+set $font4 Unifont
 
 #term
-set $term urxvt
+set $term st
 #mixer
 set $mixer amixer
 
 
 #dunst
 set $NOTI_BRIGHTESS	notify-send -u low -t 1000 -a BRIGHTNESS $(xbacklight -get)
-set $NOTI_SOUND notify-send -u low -t 100 -a SOUND $(amixer get Master |grep % |awk '{print $5}'|sed -e 's/\[//' -e 's/\]//')
+set $NOTI_SOUND notify-send -u low -t 1000 -a SOUND $(amixer get Master |grep % |awk '{print $4}'|sed -e 's/\[//' -e 's/\]//')
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:$font3 10
+font pango:$font3 11
 for_window [class=".*"] title_format "<span font='$font3 8'> > %class | %title</span>"
+
+# **************************************************************************** #
 # COLORS
+# **************************************************************************** #
 
 set_from_resource	$bg			background
 set_from_resource	$fg			foreground
@@ -62,7 +65,7 @@ client.placeholder			$dgray		$bg			$fg		$dgray		$dgray
 client.background			$bg
 
 bar {
-	font pango:$font2 8
+	font pango:$font3 8
 	status_command i3status
 	position top
 	colors {
@@ -78,19 +81,26 @@ bar {
 	}
 }
 
+# **************************************************************************** #
 # WINDOWS
+# **************************************************************************** #
 
 new_window normal 0
 hide_edge_borders both
 
+# **************************************************************************** #
 # EXEC
+# **************************************************************************** #
 
+exec_always --no-startup-id xrdb ~/.Xresources
 exec_always --no-startup-id hsetroot -solid "#000000"
 exec_always --no-startup-id compton -f
 exec_always --no-startup-id dunst
 #exec_always --no-startup-id usr/lib/node_moudules/msi-keyboard-cli/msi-keyboard-CLI.js
 
+# **************************************************************************** #
 # BIND
+# **************************************************************************** #
 
 #bindsym XF86Display
 #bindsym XF86MousePadToggle
@@ -105,7 +115,7 @@ bindsym XF86AudioMute			exec $mixer set Master toggle
 
 # start a terminal
 # default: bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec urxvt256c || exec urxvt
+bindsym $mod+Return exec $term || urxvt256c || exec urxvt || i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
