--- a/config/i3/config
+++ b/config/i3/config
@@ -5,37 +5,29 @@
 # VARIABLES                                                                    #
 # **************************************************************************** #
 
-#modifier
+# Modifier
 set $mod Mod4
+# Use Mouse+$mod to drag floating windows to their wanted position
+floating_modifier $mod
 
-#fonts
+# Fonts
 set $font1 Monaco Mono
 set $font2 Roboto Mono Bold
 set $font3 Gohu Gohufont
 set $font4 Unifont
+set $font5 nerdypepper scientifica
+set $font6 Dina
 
-#term
-set $term st
-#mixer
+# Apps
+set $term st -f "$font6:size=6"
+set $browser midori
 set $mixer amixer
 
-
-#dunst
+# Notificiation
 set $NOTI_BRIGHTESS	notify-send -u low -t 1000 -a BRIGHTNESS $(xbacklight -get)
 set $NOTI_SOUND notify-send -u low -t 1000 -a SOUND $(amixer get Master |grep % |awk '{print $4}'|sed -e 's/\[//' -e 's/\]//')
 
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
-
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-font pango:$font3 11
-for_window [class=".*"] title_format "<span font='$font3 8'> > %class | %title</span>"
-
-# **************************************************************************** #
-# COLORS
-# **************************************************************************** #
-
+# Colors
 set_from_resource	$bg			background
 set_from_resource	$fg			foreground
 
@@ -56,6 +48,16 @@ set_from_resource	$magenta	color13
 set_from_resource	$cyan		color14
 set_from_resource	$white		color15
 
+# **************************************************************************** #
+# VISUALS
+# **************************************************************************** #
+
+# Font for window titles. Will also be used by the bar unless a different font
+# is used in the bar {} block below.
+font pango:$font6 Regular 6
+for_window [class=".*"] title_format "<span font='$font6 6'> > %class | %title</span>"
+
+
 # class						border		backgr.		text	indicator	child_border
 client.focused				$fg			$fg			$bg		$fg			$fg
 client.focused_inactive 	$fg			$bg			$fg		$fg			$fg
@@ -65,7 +67,7 @@ client.placeholder			$dgray		$bg			$fg		$dgray		$dgray
 client.background			$bg
 
 bar {
-	font pango:$font3 8
+	#font pango:$font3 Regular 11
 	status_command i3status
 	position top
 	colors {
@@ -89,7 +91,7 @@ new_window normal 0
 hide_edge_borders both
 
 # **************************************************************************** #
-# EXEC
+# EXECS
 # **************************************************************************** #
 
 exec_always --no-startup-id xrdb ~/.Xresources
@@ -100,23 +102,11 @@ exec_always --no-startup-id redshift
 #exec_always --no-startup-id usr/lib/node_moudules/msi-keyboard-cli/msi-keyboard-CLI.js
 
 # **************************************************************************** #
-# BIND
+# BINDS
 # **************************************************************************** #
 
-#bindsym XF86Display
-#bindsym XF86MousePadToggle
-#bindsym NoSymbol
-#bindsym XF86WebCam
-#bindsym XF86Sleep
-bindsym XF86MonBrightnessUp		exec xbacklight -inc 5 && $NOTI_BRIGHTESS
-bindsym XF86MonBrightnessDown	exec xbacklight -dec 5 && $NOTI_BRIGHTESS
-bindsym XF86AudioRaiseVolume	exec $mixer set Master 5%+ && $NOTI_SOUND
-bindsym XF86AudioLowerVolume	exec $mixer set Master 5%- && $NOTI_SOUND
-bindsym XF86AudioMute			exec $mixer set Master toggle
-
 # start a terminal
-# default: bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec $term || urxvt256c || exec urxvt || i3-sensible-terminal
+bindsym $mod+Return exec st -f "$font6:size=8" || urxvt256c || exec urxvt || i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -129,6 +119,7 @@ bindsym $mod+d exec --no-startup-id dmenu_run -b -p 'exec :' -fn '$font1-8' -nb 
 bindsym $mod+Shift+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -b -p 'exec :' -fn '$font1-8' -nb '$bg' -nf '$fg' -sb '$fg' -sf '$bg'"
 
 # change focus
+
 bindsym $mod+h focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
@@ -162,8 +153,8 @@ bindsym $mod+v split v
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+t layout stacking
-bindsym $mod+w layout tabbed
+bindsym $mod+w layout stacking
+bindsym $mod+t layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
@@ -178,29 +169,42 @@ bindsym $mod+a focus parent
 # focus the child container
 bindsym $mod+c focus child
 
+# Define names for default workspaces for which we configure key bindings later on.
+# We use variables to avoid repeating the names in multiple places.
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
+set $ws6 "6"
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
+set $ws10 "10"
+
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+1 workspace $ws1
+bindsym $mod+2 workspace $ws2
+bindsym $mod+3 workspace $ws3
+bindsym $mod+4 workspace $ws4
+bindsym $mod+5 workspace $ws5
+bindsym $mod+6 workspace $ws6
+bindsym $mod+7 workspace $ws7
+bindsym $mod+8 workspace $ws8
+bindsym $mod+9 workspace $ws9
+bindsym $mod+0 workspace $ws10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+1 move container to workspace $ws1
+bindsym $mod+Shift+2 move container to workspace $ws2
+bindsym $mod+Shift+3 move container to workspace $ws3
+bindsym $mod+Shift+4 move container to workspace $ws4
+bindsym $mod+Shift+5 move container to workspace $ws5
+bindsym $mod+Shift+6 move container to workspace $ws6
+bindsym $mod+Shift+7 move container to workspace $ws7
+bindsym $mod+Shift+8 move container to workspace $ws8
+bindsym $mod+Shift+9 move container to workspace $ws9
+bindsym $mod+Shift+0 move container to workspace $ws10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -233,11 +237,23 @@ mode "resize"
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
-
 bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
+
+# System 
+
+#bindsym XF86Display
+#bindsym XF86MousePadToggle
+#bindsym NoSymbol
+#bindsym XF86WebCam
+#bindsym XF86Sleep
+bindsym XF86MonBrightnessUp		exec xbacklight -inc 5 && $NOTI_BRIGHTESS
+bindsym XF86MonBrightnessDown	exec xbacklight -dec 5 && $NOTI_BRIGHTESS
+bindsym XF86AudioRaiseVolume	exec $mixer set Master 5%+ && $NOTI_SOUND
+bindsym XF86AudioLowerVolume	exec $mixer set Master 5%- && $NOTI_SOUND
+bindsym XF86AudioMute			exec $mixer set Master toggle
 
 #Power control mode
 set $power_control "[l]ock log[o]ut [s]uspend [h]ibernate [r]eboot [p]oweroff"
