--- a/config/i3/config
+++ b/config/i3/config
@@ -19,13 +19,13 @@ set $font5 nerdypepper scientifica
 set $font6 Dina
 
 # Apps
-set $term st -f "$font6:size=6"
+set $term st
 set $browser midori
 set $mixer amixer
 
 # Notificiation
-set $NOTI_BRIGHTESS	notify-send -u low -t 1000 -a BRIGHTNESS $(xbacklight -get)
-set $NOTI_SOUND notify-send -u low -t 1000 -a SOUND $(amixer get Master |grep % |awk '{print $4}'|sed -e 's/\[//' -e 's/\]//')
+set $NOTI_BRIGHTESS	dunstify -u low -t 1000 -r 48 -a BRIGHTNESS $(xbacklight -get)
+set $NOTI_SOUND 	dunstify -u low -t 1000 -r 48 -a SOUND $(amixer get Master |grep % |awk '{print $4}'|sed -e 's/\[//' -e 's/\]//')
 
 # Colors
 set_from_resource	$bg			background
@@ -56,7 +56,6 @@ set_from_resource	$white		color15
 # is used in the bar {} block below.
 font pango:$font6 Regular 6
 for_window [class=".*"] title_format "<span font='$font6 6'> > %class | %title</span>"
-
 
 # class						border		backgr.		text	indicator	child_border
 client.focused				$fg			$fg			$bg		$fg			$fg
@@ -106,13 +105,13 @@ exec_always --no-startup-id redshift
 # **************************************************************************** #
 
 # start a terminal
-bindsym $mod+Return exec st -f "$font6:size=8" || urxvt256c || exec urxvt || i3-sensible-terminal
+bindsym $mod+Return exec $term -f "$font6:size=8"
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run -b -p 'exec :' -fn '$font1-8' -nb '$bg' -nf '$fg' -sb '$fg' -sf '$bg'
+bindsym $mod+d exec --no-startup-id dmenu_run -b -p 'exec :' -fn '$font6-8' -nb '$bg' -nf '$fg' -sb '$fg' -sf '$bg'
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
