vim: update vimrc, move custom statusline to its own plugin

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,7 +6,7 @@
 #    By: mgalliou <mgalliou@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/09/13 11:49:07 by mgalliou          #+#    #+#              #
-#    Updated: 2017/10/04 11:40:32 by mgalliou         ###   ########.fr        #
+#    Updated: 2018/06/18 15:17:56 by mgalliou         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -42,7 +42,7 @@ set -g status on
 # Center align status bar
 set-option -g status-justify centre
 
-# Clean status bar
+# format status bar
 set -g status-left "#H"
 set -g status-right "%H:%M %d-%b-%y"
 # defaults:
@@ -70,11 +70,11 @@ set -g pane-border-fg brightblack
 setw -g pane-border-status bottom
 setw -g pane-border-format "#{?pane_active,#[reverse],}#P:#[default] #{pane_current_command}"
 
-## writting commands inactive
+# writting commands inactive
 set -g message-command-bg white #fg3
 set -g message-command-fg black
 
-## message infos
+# message infos
 set-option -g message-bg brightwhite #bg2
 set-option -g message-fg black #fg1
 
