--- a/tmux.conf
+++ b/tmux.conf
@@ -6,7 +6,7 @@
 #    By: mgalliou <mgalliou@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/09/13 11:49:07 by mgalliou          #+#    #+#              #
-#    Updated: 2019/04/30 10:44:30 by mgalliou         ###   ########.fr        #
+#    Updated: 2019/05/05 10:47:12 by mgalliou         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -50,12 +50,9 @@ set -g status-right "%H:%M %d-%b-%y"
 # status-right " \"#{=21:pane_title}\" %H:%M %d-%b-%y"
 
 # status bar colors
-set -g status-style bg=default
-set -g status-style fg=white
-setw -g window-status-style bg=colour240
-setw -g window-status-style bg=white
-setw -g window-status-current-style bg=white
-setw -g window-status-current-style fg=black
+set -g status-style fg=black,bg=white
+setw -g window-status-style fg=black,bg=white
+setw -g window-status-current-style fg=white,bg=black
 setw -g window-status-separator '  '
 
 # windows colors
@@ -63,20 +60,16 @@ setw -g window-status-separator '  '
 #setw -g window-active-style 'bg=#121212'
  
 # pane color
-#set -g pane-active-border-style 'bg=#3a3a3a'
-#set -ag pane-active-border-style 'bg=#3a3a3a'
-set -g pane-active-border-style "fg=white"
-set -g pane-border-style "fg=brightblack"
-setw -g pane-border-status bottom
-setw -g pane-border-format "#{?pane_active,#[reverse],}#P:#[default] #{pane_current_command}"
+set -g pane-active-border-style fg=cyan,bg=black
+set -g pane-border-style fg=white,bg=black
+#setw -g pane-border-status bottom
+#setw -g pane-border-format "#{?pane_active,#[reverse],}#P:#[default] #{pane_current_command}"
 
-# writting commands inactive
-set -g message-command-style "bg=white" #fg3
-set -g message-command-style "fg=black"
+# writting commands
+#set -g message-command-style fg=black
 
 # message infos
-set-option -g message-style bg=brightwhite #bg2
-set-option -g message-style fg=black #fg1
+#set-option -g message-style fg=black
 
 # clock
 set-window-option -g clock-mode-colour white
