tmux: update styling

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,7 +6,7 @@
 #    By: mgalliou <mgalliou@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/09/13 11:49:07 by mgalliou          #+#    #+#              #
-#    Updated: 2019/05/05 10:47:12 by mgalliou         ###   ########.fr        #
+#    Updated: 2019/05/07 10:19:44 by mgalliou         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -50,6 +50,7 @@ set -g status-right "%H:%M %d-%b-%y"
 # status-right " \"#{=21:pane_title}\" %H:%M %d-%b-%y"
 
 # status bar colors
+set -g status-position top
 set -g status-style fg=black,bg=white
 setw -g window-status-style fg=black,bg=white
 setw -g window-status-current-style fg=white,bg=black
@@ -58,7 +59,7 @@ setw -g window-status-separator '  '
 # windows colors
 #setw -g window-style 'bg=#262626'
 #setw -g window-active-style 'bg=#121212'
- 
+
 # pane color
 set -g pane-active-border-style fg=cyan,bg=black
 set -g pane-border-style fg=white,bg=black
