tmux: format config file

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,16 +1,6 @@
 # **************************************************************************** #
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    tmux.conf                                          :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: mgalliou <mgalliou@student.42.fr>          +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2017/09/13 11:49:07 by mgalliou          #+#    #+#              #
-#    Updated: 2019/05/07 10:19:44 by mgalliou         ###   ########.fr        #
-#                                                                              #
+# Keybinds {{{
 # **************************************************************************** #
-
-# Key binds
 
 # Reload tmux config
 unbind C-r
@@ -27,17 +17,27 @@ bind-key -r C-l resize-pane -R
 #bind-key C-k select-pane -U
 #bind-key C-l select-pane -R
 
-# Behavior
+#}}},
+# **************************************************************************** #
+
+# **************************************************************************** #
+# Behavior {{{
+# **************************************************************************** #
 
 set -g status-keys vi
 setw -g mode-keys vi
 setw -g mouse on
 setw -g monitor-activity on
-set -g default-terminal screen-256color
 
-# UI
+#}}},
+# **************************************************************************** #
+
+# **************************************************************************** #
+# UI {{{
+# **************************************************************************** #
 
 set -g status on
+set -g status-position top
 
 # Center align status bar
 set-option -g status-justify centre
@@ -50,8 +50,9 @@ set -g status-right "%H:%M %d-%b-%y"
 # status-right " \"#{=21:pane_title}\" %H:%M %d-%b-%y"
 
 # status bar colors
-set -g status-position top
 set -g status-style fg=black,bg=white
+
+# window status
 setw -g window-status-style fg=black,bg=white
 setw -g window-status-current-style fg=white,bg=black
 setw -g window-status-separator '  '
@@ -89,3 +90,6 @@ set-window-option -g window-status-bell-style fg=black,bg=red
 #set-option -g display-panes-active-colour brightwhite
 #set-option -g display-panes-colour black
 #
+
+#}}},
+# **************************************************************************** #
