tmux: update styling

--- a/tmux.conf
+++ b/tmux.conf
@@ -36,60 +36,51 @@ setw -g monitor-activity on
 # UI {{{
 # **************************************************************************** #
 
-set -g status on
+set -g default-terminal screen-256color
+
+# status
+set -g status          on
 set -g status-position top
+set -g status-justify  centre
+set -g status-style    fg=white,bg=black
 
-# Center align status bar
-set-option -g status-justify centre
+# status left
+set -g status-left        " #H "
+set -g status-left-length 20
+set -g status-left-style fg=black,bg=white
 
-# format status bar
-set -g status-left "#H"
-set -g status-right "%H:%M %d-%b-%y"
-# defaults:
-# status-left "[#S] "
-# status-right " \"#{=21:pane_title}\" %H:%M %d-%b-%y"
-
-# status bar colors
-set -g status-style fg=black,bg=white
+# status right
+set -g status-right       " %H:%M %d-%b-%y "
+set -g status-right-style fg=black,bg=white
 
 # window status
-setw -g window-status-style fg=black,bg=white
-setw -g window-status-current-style fg=white,bg=black
-setw -g window-status-separator '  '
+setw -g window-status-separator      ' '
+setw -g window-status-current-format " #I:#W#{?window_flags,#{window_flags} , }"
+setw -g window-status-current-style  fg=black,bg=cyan
+setw -g window-status-format         " #I:#W#{?window_flags,#{window_flags} , }"
+setw -g window-status-style          fg=black,bg=white
+#setw -g window-status-activity-bg black #bg1
+#setw -g window-status-activity-fg white #fg3
 
-# windows colors
-#setw -g window-style 'bg=#262626'
-#setw -g window-active-style 'bg=#121212'
+# pane
+set -g pane-active-border-style    fg=cyan,bg=black
+set -g pane-border-style           fg=white,bg=black
+setw -g pane-border-status         bottom
+setw -g pane-border-format         "#{?pane_active,#[reverse],} #P:#[default] #{pane_current_command}"
+set -g display-panes-active-colour cyan
+set -g display-panes-colour        white
 
-# pane color
-set -g pane-active-border-style fg=cyan,bg=black
-set -g pane-border-style fg=white,bg=black
-#setw -g pane-border-status bottom
-#setw -g pane-border-format "#{?pane_active,#[reverse],}#P:#[default] #{pane_current_command}"
-
-# writting commands
-#set -g message-command-style fg=black
+# message command
+set -g message-command-style fg=black,bg=red
 
 # message infos
-#set-option -g message-style fg=black
+set -g message-style fg=black,bg=cyan
 
 # clock
-set-window-option -g clock-mode-colour white
+setw -g clock-mode-colour white
 
 # bell
-set-window-option -g window-status-bell-style fg=black,bg=red
-
-## THEME
-#set -g window-status-current-attr bold
-#
-#set-window-option -g window-status-activity-bg black #bg1
-#set-window-option -g window-status-activity-fg white #fg3
-#
-#
-## pane number display
-#set-option -g display-panes-active-colour brightwhite
-#set-option -g display-panes-colour black
-#
+setw -g window-status-bell-style fg=black,bg=red
 
 #}}},
 # **************************************************************************** #
