--- a/tmux.conf
+++ b/tmux.conf
@@ -24,6 +24,7 @@ bind-key -r C-l resize-pane -R
 # Behavior {{{
 # **************************************************************************** #
 
+set -g escape-time 10
 set -g status-keys vi
 setw -g mode-keys vi
 setw -g mouse on
