tmux: disable mouse mode, set fish as default-shell

--- a/tmux.conf
+++ b/tmux.conf
@@ -27,8 +27,9 @@ bind-key -r C-l resize-pane -R
 set -g escape-time 10
 set -g status-keys vi
 setw -g mode-keys vi
-setw -g mouse on
+#setw -g mouse on
 setw -g monitor-activity on
+set -g default-shell "/usr/local/bin/fish"
 
 #}}},
 # **************************************************************************** #
