tmux: change pane-split keybinds to open new panes in the same working directory

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,6 +17,9 @@ bind-key -r C-l resize-pane -R
 #bind-key C-k select-pane -U
 #bind-key C-l select-pane -R
 
+bind-key -r '"' split-window -c "#{pane_current_path}"
+bind-key -r '%' split-window -h -c "#{pane_current_path}"
+
 #}}},
 # **************************************************************************** #
 
