tmux: change inactive pane border color

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,7 +32,7 @@ set -g status-keys vi
 setw -g mode-keys vi
 #setw -g mouse on
 setw -g monitor-activity on
-set -g default-shell "/usr/local/bin/fish"
+set -g default-shell "$HOME/.brew/bin/fish"
 
 #}}},
 # **************************************************************************** #
@@ -69,7 +69,7 @@ setw -g window-status-style          fg=black,bg=white
 
 # pane
 set -g pane-active-border-style    fg=cyan,bg=black
-set -g pane-border-style           fg=white,bg=black
+set -g pane-border-style           fg=brightblack,bg=black
 setw -g pane-border-status         bottom
 setw -g pane-border-format         "#{?pane_active,#[reverse],} #P:#[default] #{pane_current_command}"
 set -g display-panes-active-colour cyan
