--- a/tmux.conf
+++ b/tmux.conf
@@ -30,7 +30,7 @@ bind-key -r '%' split-window -h -c "#{pane_current_path}"
 set -g escape-time 10
 set -g status-keys vi
 setw -g mode-keys vi
-#setw -g mouse on
+setw -g mouse on
 setw -g monitor-activity on
 set -g default-shell "$HOME/.brew/bin/fish"
 
@@ -45,7 +45,7 @@ set -g default-terminal screen-256color
 
 # status
 set -g status          on
-set -g status-position top
+set -g status-position bottom
 set -g status-justify  centre
 set -g status-style    fg=white,bg=black
 
@@ -60,20 +60,18 @@ set -g status-right-style fg=black,bg=white
 
 # window status
 setw -g window-status-separator      ' '
-setw -g window-status-current-format " #I:#W#{?window_flags,#{window_flags} , }"
-setw -g window-status-current-style  fg=black,bg=cyan
 setw -g window-status-format         " #I:#W#{?window_flags,#{window_flags} , }"
 setw -g window-status-style          fg=black,bg=white
-#setw -g window-status-activity-bg black #bg1
-#setw -g window-status-activity-fg white #fg3
+setw -g window-status-current-format " #I:#W#{?window_flags,#{window_flags} , }"
+setw -g window-status-current-style  fg=black,bg=cyan
 
 # pane
-set -g pane-active-border-style    fg=cyan,bg=black
-set -g pane-border-style           fg=brightblack,bg=black
 setw -g pane-border-status         bottom
 setw -g pane-border-format         "#{?pane_active,#[reverse],} #P:#[default] #{pane_current_command}"
-set -g display-panes-active-colour cyan
+set -g pane-border-style           fg=brightblack,bg=black
+set -g pane-active-border-style    fg=cyan,bg=black
 set -g display-panes-colour        white
+set -g display-panes-active-colour cyan
 
 # message command
 set -g message-command-style fg=black,bg=red
