--- a/tmux.conf
+++ b/tmux.conf
@@ -32,7 +32,9 @@ set -g status-keys vi
 setw -g mode-keys vi
 setw -g mouse on
 setw -g monitor-activity on
-set -g default-shell "$HOME/.brew/bin/fish"
+
+# set 'fish' from brew as default shell when on macos
+if-shell "[[ $(uname -s) = 'Darwin' ]]" "set -g default-shell '$HOME/.brew/bin/fish'"
 
 #}}},
 # **************************************************************************** #
@@ -69,7 +71,7 @@ setw -g window-status-current-style  fg=black,bg=cyan
 setw -g pane-border-status         bottom
 setw -g pane-border-format         "#{?pane_active,#[reverse],} #P:#[default] #{pane_current_command}"
 set -g pane-border-style           fg=brightblack,bg=black
-set -g pane-active-border-style    fg=cyan,bg=black
+set -g pane-active-border-style    fg=black,bg=white
 set -g display-panes-colour        white
 set -g display-panes-active-colour cyan
 
