--- a/tmux.conf
+++ b/tmux.conf
@@ -43,7 +43,8 @@ if-shell "[[ $(uname -s) = 'Darwin' ]]" "set -g default-shell '$HOME/.brew/bin/f
 # UI {{{
 # **************************************************************************** #
 
-set -g default-terminal screen-256color
+set -g default-terminal xterm-256color
+#set-option -sa terminal-overrides ",xterm*:Tc"
 
 # status
 set -g status          on
