taskell: update configs

--- a/taskell/.config/taskell/config.ini
+++ b/taskell/.config/taskell/config.ini
@@ -2,10 +2,12 @@
 filename = taskell.md
 
 [layout]
+padding = 1
 column_width = 30
 column_padding = 1
 description_indicator = "..." 
 ;"≡"
+statusbar = true
 
 [markdown]
 title = "##"
@@ -13,3 +15,4 @@ task = "-"
 summary = "    >"
 due = "    @"
 subtask = "    *"
+localTimes = false
