--- a/taskell/.config/taskell/theme.ini
+++ b/taskell/.config/taskell/theme.ini
@@ -3,14 +3,25 @@
 ; list title
 title.fg = white
 
+; status bar
+statusBar.bg = cyan
+statusBar.fg = white
+
 ; current list title
 titleCurrent.fg = brightCyan
 
 ; current task
 task.fg = white
-
 ; current task
 taskCurrent.fg = cyan
+
+; subtasks
+; selected
+subtaskCurrent.fg = cyan
+; incomplete
+subtaskIncomplete.fg = white
+; complete
+subtaskComplete.fg = brightGreen
 
 ; disabled
 disabled.fg = brightBlack
