--- a/taskell/.config/taskell/bindings.ini
+++ b/taskell/.config/taskell/bindings.ini
@@ -1,8 +1,10 @@
 # general
 quit = q
 undo = u
+redo = r
 search = /
 help = ?
+due = !
 
 # navigation
 previous = k
@@ -10,11 +12,13 @@ next = j
 left = h
 right = l
 bottom = G
+top = g
 
 # new tasks
 new = a
 newAbove = O
 newBelow = o
+duplicate = +
 
 # editing tasks
 edit = e, A, i
@@ -22,12 +26,22 @@ clear = C
 delete = D
 detail = <Enter>
 dueDate = @
+clearDate = <Backspace>
 
 # moving tasks
 moveUp = K
 moveDown = J
-moveLeft = H
-moveRight = L, <Space>
+# move to top of previous list
+moveLeftTop = ˙
+# move to top of next list
+moveRightTop = ¬
+# move to bottom of previous list
+moveLeftBottom = H
+# move to bottom of next list
+moveRightBottom = L
+# move to bottom of last list
+complete = <Space>
+# select a list to move to
 moveMenu = m
 
 # lists
