taskell: update theme

--- a/taskell/.config/taskell/theme.ini
+++ b/taskell/.config/taskell/theme.ini
@@ -1,25 +1,37 @@
+[default]
+
+; the app background colour
+default.bg = black
+
+; ; the app text colour
+default.fg = white
+
+
 [other]
 
 ; list title
-title.fg = white
+title.fg = cyan
+
+; current list title
+titleCurrent.bg = white
+titleCurrent.fg = black
 
 ; status bar
 statusBar.bg = cyan
-statusBar.fg = white
+statusBar.fg = black
 
-; current list title
-titleCurrent.fg = brightCyan
+; task
+task.fg = brightBlack
 
 ; current task
-task.fg = white
-; current task
-taskCurrent.fg = cyan
+taskCurrent.bg = cyan
+taskCurrent.fg = black
 
 ; subtasks
 ; selected
 subtaskCurrent.fg = cyan
 ; incomplete
-subtaskIncomplete.fg = white
+subtaskIncomplete.fg = brightBlack
 ; complete
 subtaskComplete.fg = brightGreen
 
@@ -29,4 +41,5 @@ disabled.fg = brightBlack
 ; due
 dlDue.fg = brightYellow
 dlSoon.fg = brightRed
-;dlFar.fg = brightYe
+dlFar.fg = brightGreen
+
