--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,8 +33,10 @@ setw -g mode-keys vi
 setw -g mouse on
 setw -g monitor-activity on
 
-# set 'fish' from brew as default shell when on macos
+# set 'fish' from brew as default shell when on macOS
 if-shell "[[ $(uname -s) = 'Darwin' ]]" "set -g default-shell '$HOME/.brew/bin/fish'"
+# set 'fish' as default shell if at school 42
+if-shell "[[ $(whoami) =~ 'mgalliou' ]]" "set -g default-shell '/usr/bin/fish'"
 
 #}}},
 # **************************************************************************** #
