tmux: add plugin related settings

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,8 +22,6 @@ bind-key -r '%' split-window -h -c "#{pane_current_path}"
 
 #}}},
 # **************************************************************************** #
-
-# **************************************************************************** #
 # Behavior {{{
 # **************************************************************************** #
 
@@ -39,8 +37,6 @@ if-shell '[ $(uname -s) = "Darwin" ]' 'set -g default-shell "$HOME/.brew/bin/fis
 if-shell '[ $(whoami) = "mgalliou" ]' 'set -g default-shell /usr/bin/fish'
 
 #}}},
-# **************************************************************************** #
-
 # **************************************************************************** #
 # UI {{{
 # **************************************************************************** #
@@ -92,3 +88,23 @@ setw -g window-status-bell-style fg=black,bg=red
 
 #}}},
 # **************************************************************************** #
+# Plugins {{{
+# **************************************************************************** #
+#}}},
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Other examples:
+#set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+#auto install TMP and plugins
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && tmux source ~/.tmux.conf && ~/.tmux/plugins/tpm/bin/install_plugins'"
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
