--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -96,6 +96,8 @@ setw -g window-status-bell-style fg=black,bg=red
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
+set -g @yank_with_mouse off
+
 # Other examples:
 #set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'github_username/plugin_name'
