taskell: update theme

--- a/taskell/.config/taskell/theme.ini
+++ b/taskell/.config/taskell/theme.ini
@@ -4,42 +4,41 @@
 default.bg = black
 
 ; ; the app text colour
-default.fg = white
-
+default.fg = yellow
 
 [other]
 
 ; list title
 title.fg = cyan
+title.bg = black
 
 ; current list title
-titleCurrent.bg = white
 titleCurrent.fg = black
+titleCurrent.bg = brightCyan
 
 ; status bar
-statusBar.bg = cyan
 statusBar.fg = black
+statusBar.bg = cyan
 
 ; task
-task.fg = brightBlack
-
 ; current task
-taskCurrent.bg = cyan
 taskCurrent.fg = black
+taskCurrent.bg = brightWhite
 
 ; subtasks
 ; selected
-subtaskCurrent.fg = cyan
+subtaskCurrent.fg = black
+subtaskCurrent.bg = brightWhite
 ; incomplete
 subtaskIncomplete.fg = brightBlack
 ; complete
 subtaskComplete.fg = brightGreen
 
 ; disabled
-disabled.fg = brightBlack
+disabled.fg = magenta
 
 ; due
-dlDue.fg = brightYellow
+dlDue.fg = red
 dlSoon.fg = brightRed
-dlFar.fg = brightGreen
+dlFar.fg = green
 
