taskell: change selection and farDue color

--- a/taskell/.config/taskell/theme.ini
+++ b/taskell/.config/taskell/theme.ini
@@ -1,10 +1,9 @@
 [default]
 
+; ; the app text colour
+default.fg = brightYellow
 ; the app background colour
 default.bg = black
-
-; ; the app text colour
-default.fg = yellow
 
 [other]
 
@@ -23,12 +22,12 @@ statusBar.bg = cyan
 ; task
 ; current task
 taskCurrent.fg = black
-taskCurrent.bg = brightWhite
+taskCurrent.bg = yellow
 
 ; subtasks
 ; selected
 subtaskCurrent.fg = black
-subtaskCurrent.bg = brightWhite
+subtaskCurrent.bg = yellow
 ; incomplete
 subtaskIncomplete.fg = brightBlack
 ; complete
@@ -41,4 +40,3 @@ disabled.fg = magenta
 dlDue.fg = red
 dlSoon.fg = brightRed
 dlFar.fg = green
-
