--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,10 +31,9 @@ setw -g mode-keys vi
 setw -g mouse on
 setw -g monitor-activity on
 
-# set 'fish' from brew as default shell when on macOS
-if-shell '[ $(uname -s) = "Darwin" ]' 'set -g default-shell "$HOME/.brew/bin/fish"'
-# set 'fish' as default shell if at school 42
-if-shell '[ $(whoami) = "mgalliou" ]' 'set -g default-shell /usr/bin/fish'
+run-shell 'tmux set-environment -g FISH $(which fish)'
+if-shell 'command -v fish' 'set -g default-shell $FISH'
+set-environment -gu FISH
 
 #}}},
 # **************************************************************************** #
@@ -90,7 +89,6 @@ setw -g window-status-bell-style fg=black,bg=red
 # **************************************************************************** #
 # Plugins {{{
 # **************************************************************************** #
-#}}},
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -110,3 +108,5 @@ if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && tmux source ~/.tmux.conf && ~/.tmux/plugins/tpm/bin/install_plugins'"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+#}}},
