tmux: turn off pane status, change base index to 1

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -44,6 +44,7 @@ set -g default-terminal xterm-256color
 #set-option -sa terminal-overrides ",xterm*:Tc"
 
 # status
+set -g base-index      1
 set -g status          on
 set -g status-position bottom
 set -g status-justify  centre
@@ -66,12 +67,14 @@ setw -g window-status-current-format " #I:#W#{?window_flags,#{window_flags} , }"
 setw -g window-status-current-style  fg=black,bg=cyan
 
 # pane
-setw -g pane-border-status         bottom
+
+set -g  pane-base-index      1
+setw -g pane-border-status         off
 setw -g pane-border-format         "#{?pane_active,#[reverse],} #P:#[default] #{pane_current_command}"
-set -g pane-border-style           fg=brightblack,bg=black
-set -g pane-active-border-style    fg=black,bg=white
-set -g display-panes-colour        white
-set -g display-panes-active-colour cyan
+set -g  pane-border-style           fg=brightblack,bg=black
+set -g  pane-active-border-style    fg=black,bg=white
+set -g  display-panes-colour        white
+set -g  display-panes-active-colour cyan
 
 # message command
 set -g message-command-style fg=black,bg=red
