--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,21 +2,23 @@
 # Keybinds {{{
 # **************************************************************************** #
 
-# Reload tmux config
+# reload tmux config
 unbind C-r
 bind-key C-r source-file ~/.tmux.conf
 
-#Vim style pane selection
-bind-key -r C-h resize-pane -L
-bind-key -r C-j resize-pane -D
-bind-key -r C-k resize-pane -U
-bind-key -r C-l resize-pane -R
-
+# vim style pane selection
 #bind-key C-h select-pane -L
 #bind-key C-j select-pane -D
 #bind-key C-k select-pane -U
 #bind-key C-l select-pane -R
 
+# vim style pane resizing
+bind-key -r C-h resize-pane -L
+bind-key -r C-j resize-pane -D
+bind-key -r C-k resize-pane -U
+bind-key -r C-l resize-pane -R
+
+# split pane with current pane working directory
 bind-key -r '"' split-window -c "#{pane_current_path}"
 bind-key -r '%' split-window -h -c "#{pane_current_path}"
 
@@ -53,7 +55,7 @@ set -g status-style    fg=white,bg=black
 # status left
 set -g status-left        " #H "
 set -g status-left-length 20
-set -g status-left-style fg=black,bg=white
+set -g status-left-style  fg=black,bg=white
 
 # status right
 set -g status-right       " %H:%M %d-%b-%y "
@@ -67,10 +69,9 @@ setw -g window-status-current-format " #I:#W#{?window_flags,#{window_flags} , }"
 setw -g window-status-current-style  fg=black,bg=cyan
 
 # pane
-
-set -g  pane-base-index      1
-setw -g pane-border-status         off
-setw -g pane-border-format         "#{?pane_active,#[reverse],} #P:#[default] #{pane_current_command}"
+set -g  pane-base-index             1
+setw -g pane-border-status          off
+setw -g pane-border-format          "#{?pane_active,#[reverse],} #P:#[default] #{pane_current_command}"
 set -g  pane-border-style           fg=brightblack,bg=black
 set -g  pane-active-border-style    fg=black,bg=white
 set -g  display-panes-colour        white
@@ -93,7 +94,6 @@ setw -g window-status-bell-style fg=black,bg=red
 # Plugins {{{
 # **************************************************************************** #
 
-# List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
@@ -106,7 +106,7 @@ set -g @yank_with_mouse off
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
-#auto install TMP and plugins
+# Auto install TMP and plugins
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && tmux source ~/.tmux.conf && ~/.tmux/plugins/tpm/bin/install_plugins'"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
