--- a/tmux/.tmux/themes/tmuxline-gruvbox.tmux.conf
+++ b/tmux/.tmux/themes/tmuxline-gruvbox.tmux.conf
@@ -19,3 +19,6 @@ set -g status-left "#[fg=#32302f,bg=#83a598] #S #[fg=#83a598,bg=#3c3836,nobold,n
 set -g status-right "#[fg=#7c6f64,bg=#3c3836,nobold,nounderscore,noitalics]#[fg=#32302f,bg=#7c6f64] %R "
 setw -g window-status-format "#[fg=#3c3836,bg=#3c3836,nobold,nounderscore,noitalics]#[default] #I #W #[fg=#3c3836,bg=#3c3836,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=#3c3836,bg=#665c54,nobold,nounderscore,noitalics]#[fg=#928374,bg=#665c54] #I #W #[fg=#665c54,bg=#3c3836,nobold,nounderscore,noitalics]"
+
+set-hook -g pane-mode-changed 'if -F "#{m/r:(copy|view)-mode,#{pane_mode}}" "set -g status-left \"#[fg=#32302f,bg=#fe8019] #S #[fg=#fe8019,bg=#3c3836,nobold,nounderscore,noitalics]\"" "set -g status-left \"#[fg=#32302f,bg=#83a598] #S #[fg=#83a598,bg=#3c3836,nobold,nounderscore,noitalics]\""'
+
