tmux: fix nvim checkhealth issues, reorganize config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,10 +1,30 @@
-# **************************************************************************** #
-# Keybinds {{{
-# **************************************************************************** #
+# Behavior {{{
 
-# reload tmux config
-unbind C-r
-bind-key C-r source-file ~/.tmux.conf
+set -g escape-time 10
+set -g focus-events on
+set -g status-keys vi
+setw -g mode-keys vi
+setw -g mouse on
+setw -g monitor-activity on
+
+run-shell 'tmux set-environment -g FISH $(which fish)'
+if-shell 'command -v fish' 'set -g default-shell $FISH'
+set-environment -gu FISH
+
+#}}},
+# UI {{{
+
+set -g default-terminal screen-256color
+set -sa terminal-overrides ",xterm*:Tc"
+set -g  base-index 1
+set -g  pane-base-index 1
+setw -g pane-border-status off
+
+#theme
+source $HOME/.tmux/themes/tmuxline-gruvbox.tmux.conf
+
+#}}},
+# Keybinds {{{
 
 # vim style pane selection
 #bind-key C-h select-pane -L
@@ -23,38 +43,7 @@ bind-key -r '"' split-window -c "#{pane_current_path}"
 bind-key -r '%' split-window -h -c "#{pane_current_path}"
 
 #}}},
-# **************************************************************************** #
-# Behavior {{{
-# **************************************************************************** #
-
-set -g escape-time 10
-set -g status-keys vi
-setw -g mode-keys vi
-setw -g mouse on
-setw -g monitor-activity on
-
-run-shell 'tmux set-environment -g FISH $(which fish)'
-if-shell 'command -v fish' 'set -g default-shell $FISH'
-set-environment -gu FISH
-
-#}}},
-# **************************************************************************** #
-# UI {{{
-# **************************************************************************** #
-
-set -g default-terminal xterm-256color
-#set-option -sa terminal-overrides ",xterm*:Tc"
-set -g  base-index      1
-set -g  pane-base-index             1
-setw -g pane-border-status          off
-
-#theme
-source $HOME/.tmux/themes/tmuxline-gruvbox.tmux.conf
-
-#}}},
-# **************************************************************************** #
 # Plugins {{{
-# **************************************************************************** #
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
