tmux: cleanup config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,6 +7,7 @@ setw -g mode-keys vi
 setw -g mouse on
 setw -g monitor-activity on
 
+# set fish from $PATH as default shell
 run-shell 'tmux set-environment -g FISH $(which fish)'
 if-shell 'command -v fish' 'set -g default-shell $FISH'
 set-environment -gu FISH
@@ -20,7 +21,7 @@ set -g  base-index 1
 set -g  pane-base-index 1
 setw -g pane-border-status off
 
-#theme
+# theme
 source $HOME/.tmux/themes/tmuxline-gruvbox.tmux.conf
 
 #}}},
@@ -48,14 +49,8 @@ bind-key -r '%' split-window -h -c "#{pane_current_path}"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
+# settings
 set -g @yank_with_mouse off
-
-# Other examples:
-#set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
 
 # Auto install TMP and plugins
 if "test ! -d ~/.tmux/plugins/tpm" \
