--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,7 +16,7 @@ set-environment -gu FISH
 # UI {{{
 
 set -g default-terminal screen-256color
-set -sa terminal-overrides ",xterm*:Tc"
+set -sa terminal-overrides ",*:RGB"
 set -g  base-index 1
 set -g  pane-base-index 1
 setw -g pane-border-status off
