tmux: make custom-gruvbox theme variables hidden

--- a/tmux/.tmux/themes/custom-gruvbox.tmux.conf
+++ b/tmux/.tmux/themes/custom-gruvbox.tmux.conf
@@ -1,20 +1,20 @@
-BLACK="#3c3836"
-BBLACK="#32302f"
-GRAY="#665c54"
-WHITE="#ebdbb2"
-BLUE="#83a598"
-ORANGE="#fe8019"
+%hidden BLACK="#3c3836"
+%hidden BBLACK="#32302f"
+%hidden GRAY="#665c54"
+%hidden WHITE="#ebdbb2"
+%hidden BLUE="#83a598"
+%hidden ORANGE="#fe8019"
 
-FG=$WHITE
-BG=$BLACK
-BG2=$BBLACK
-BG3=$GRAY
-BG4="#7c6f64"
+%hidden FG=$WHITE
+%hidden BG=$BLACK
+%hidden BG2=$BBLACK
+%hidden BG3=$GRAY
+%hidden BG4="#7c6f64"
 
-LS=""
-RS=""
+%hidden LS=""
+%hidden RS=""
 
-RESET="nobold,nounderscore,noitalics"
+%hidden RESET="nobold,nounderscore,noitalics"
 
 set -g status-justify "left"
 set -g status "on"
