tmux: optimize default-shell config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,9 +8,8 @@ setw -g mouse on
 setw -g monitor-activity on
 
 # set fish from $PATH as default shell
-run-shell 'tmux set-environment -g FISH $(which fish)'
+run-shell 'tmux set-environment -gh FISH $(which fish)'
 if-shell 'command -v fish' 'set -g default-shell $FISH'
-set-environment -gu FISH
 
 #}}},
 # UI {{{
