--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -21,7 +21,7 @@ set -g  pane-base-index 1
 setw -g pane-border-status off
 
 # theme
-source $HOME/.tmux/themes/custom-gruvbox.tmux.conf
+source $HOME/.config/tmux/themes/custom-gruvbox.tmux.conf
 
 #}}},
 # Keybinds {{{
@@ -52,9 +52,9 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @yank_with_mouse off
 
 # Auto install TMP and plugins
-if "test ! -d ~/.tmux/plugins/tpm" \
-   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && tmux source ~/.tmux.conf && ~/.tmux/plugins/tpm/bin/install_plugins'"
+if "test ! -d ~/.config/tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm && tmux source ~/.config/tmux/tmux.conf && ~/.config/tmux/plugins/tpm/bin/install_plugins'"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
 
 #}}},
