--- a/tmux/.config/tmux/themes/custom-gruvbox.tmux.conf
+++ b/tmux/.config/tmux/themes/custom-gruvbox.tmux.conf
@@ -31,7 +31,7 @@ setw -g window-status-activity-style "none,fg=$FG,bg=$BG"
 setw -g window-status-separator ""
 setw -g window-status-style "none,fg=$BG4,bg=$BG"
 set -g status-left "#[fg=$BG2,bg=$BLUE,bold] #S #[fg=$BLUE,bg=$BG,$RESET]$RS"
-set -g status-right "#[fg=$BG4,bg=$BG,$RESET]$LS#[fg=$BG,bg=$BG4,bold] %R "
+set -g status-right "#[fg=$BG4,bg=$BG,$RESET]$LS#[fg=$BG2,bg=$BG4,bold] %R "
 setw -g window-status-format "#[fg=$BG,bg=$BG,$RESET]$RS#[default] #I #W #[fg=$BG,bg=$BG,$RESET]$RS"
 setw -g window-status-current-format "#[fg=$BG,bg=$BG3,$RESET]$RS#[fg=$FG,bg=$BG3] #I #W #[fg=$BG3,bg=$BG,$RESET]$RS"
 
