--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -19,6 +19,7 @@ set -sa terminal-overrides ",*:RGB"
 set -g  base-index 1
 set -g  pane-base-index 1
 setw -g pane-border-status off
+set -g status-position top
 
 # theme
 source $HOME/.config/tmux/themes/custom-gruvbox.tmux.conf
