--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -14,8 +14,8 @@ if-shell 'command -v fish' 'set -g default-shell $FISH'
 #}}},
 # UI {{{
 
+set -sa terminal-overrides ",$TERM:RGB"
 set -g default-terminal screen-256color
-set -sa terminal-overrides ",*:RGB"
 set -g  base-index 1
 set -g  pane-base-index 1
 setw -g pane-border-status off
