taskell: edit theme to make cursor visible on new tasks

--- a/taskell/.config/taskell/theme.ini
+++ b/taskell/.config/taskell/theme.ini
@@ -21,8 +21,8 @@ statusBar.bg = cyan
 
 ; task
 ; current task
-taskCurrent.fg = black
-taskCurrent.bg = yellow
+taskCurrent.fg = brightBlack
+taskCurrent.bg = brightYellow
 
 ; subtasks
 ; selected
