tmux: add pwd in current window name for custom-gruvbox theme

--- a/tmux/.config/tmux/themes/custom-gruvbox.tmux.conf
+++ b/tmux/.config/tmux/themes/custom-gruvbox.tmux.conf
@@ -32,8 +32,8 @@ setw -g window-status-separator ""
 setw -g window-status-style "none,fg=$BG4,bg=$BG"
 set -g status-left "#[fg=$BG2,bg=$BLUE,bold] #S #[fg=$BLUE,bg=$BG,$RESET]$RS"
 set -g status-right "#[fg=$BG4,bg=$BG,$RESET]$LS#[fg=$BG2,bg=$BG4,bold] %R "
-setw -g window-status-format "#[fg=$BG,bg=$BG,$RESET]$RS#[default] #I #W #[fg=$BG,bg=$BG,$RESET]$RS"
-setw -g window-status-current-format "#[fg=$BG,bg=$BG3,$RESET]$RS#[fg=$FG,bg=$BG3] #I #W #[fg=$BG3,bg=$BG,$RESET]$RS"
+setw -g window-status-format "#[fg=$BG,bg=$BG,$RESET]$RS#[default] #W #[fg=$BG,bg=$BG,$RESET]$RS"
+setw -g window-status-current-format "#[fg=$BG,bg=$BG3,$RESET]$RS#[fg=$FG,bg=$BG3] #{pane_current_path}:#W #[fg=$BG3,bg=$BG,$RESET]$RS"
 
 set-hook -g pane-mode-changed {
 	if -F "#{m/r:(copy|view)-mode,#{pane_mode}}" {
