tmux: set status-position to bottom

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -21,7 +21,7 @@ set -g default-terminal tmux-256color
 set -g  base-index 1
 set -g  pane-base-index 1
 setw -g pane-border-status off
-set -g status-position top
+set -g status-position bottom
 
 # theme
 source $HOME/.config/tmux/themes/custom-gruvbox.tmux.conf
