starship: enable extensions detection for k8s module

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -59,6 +59,7 @@ format = """\
 [ $namespace](fg:black bg:bright-white)\
 [](fg:bright-white bg:black)\
 """
+detect_extensions = [ "k8s.yaml", "k8s" ]
 disabled = false
 
 [jobs]
