starship: fix newline at the end of git_ststus format

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -37,8 +37,8 @@ format = """\
 		  [$renamed](yellow)\
 		  [$untracked](bright-black) \
 		  ($ahead_behind$stashed)\
-		  ]($style)
-"""
+		  ]($style)\
+		  """
 style = "cyan"
 up_to_date = ""
 conflicted = "="
