starship: add git_commit module

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -5,6 +5,7 @@ format = """
 $hostname\
 $directory\
 $git_branch\
+$git_commit\
 $git_state\
 $git_status\
 $kubernetes \
@@ -27,6 +28,14 @@ symbol = " "
 [git_branch]
 format = "$symbol[$branch]($style)"
 style = "bright-black"
+
+[git_commit]
+commit_hash_length = 4
+only_detached = false
+tag_disabled = false
+tag_symbol = ""
+format = "[(\\($tag\\))]($style)"
+style = "bright-yellow"
 
 [git_status]
 format = """\
