--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -24,7 +24,7 @@ setw -g pane-border-status off
 set -g status-position bottom
 
 # theme
-source $HOME/.config/tmux/themes/custom-gruvbox.tmux.conf
+#source $HOME/.config/tmux/themes/custom-gruvbox.tmux.conf
 
 #}}},
 # Keybinds {{{
@@ -50,6 +50,12 @@ bind-key -r '%' split-window -h -c "#{pane_current_path}"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'gruvbox'
+#set -g @catppuccin_window_tabs_enabled on
+set -g @catppuccin_date_time "%Y/%m/%d %H:%M"
+#set -g @catppuccin_user "on"
+#set -g @catppuccin_host "on"
 
 # settings
 set -g @yank_with_mouse off
