feat(tmux): add and use themux theme

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -24,7 +24,7 @@ setw -g pane-border-status off
 set -g status-position bottom
 
 # theme
-source $HOME/.config/tmux/themes/custom-gruvbox.tmux.conf
+run-shell $HOME/.config/tmux/themes/themux.tmux
 
 #}}},
 # Keybinds {{{
