--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -45,6 +45,12 @@ bind-key -r C-l resize-pane -R
 bind-key -r '"' split-window -c "#{pane_current_path}"
 bind-key -r '%' split-window -h -c "#{pane_current_path}"
 
+bind-key 1 if-shell 'tmux select-window -t :1' '' 'new-window -t :1' 
+bind-key 2 if-shell 'tmux select-window -t :2' '' 'new-window -t :2' 
+bind-key 3 if-shell 'tmux select-window -t :3' '' 'new-window -t :3' 
+bind-key 4 if-shell 'tmux select-window -t :4' '' 'new-window -t :4' 
+bind-key 5 if-shell 'tmux select-window -t :5' '' 'new-window -t :5' 
+
 #}}},
 # Plugins {{{
 
