--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -23,9 +23,6 @@ set -g  pane-base-index 1
 setw -g pane-border-status off
 set -g status-position bottom
 
-# theme
-run-shell $HOME/.config/tmux/themes/themux.tmux
-
 #}}},
 # Keybinds {{{
 
@@ -56,6 +53,7 @@ bind-key 5 if-shell 'tmux select-window -t :5' '' 'new-window -t :5'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'git@github.com:mgalliou/themux'
 
 # settings
 set -g @yank_with_mouse off
